fix button text align

--- a/src/pages/updatedesc/updatedesc.css
+++ b/src/pages/updatedesc/updatedesc.css
@@ -19,13 +19,22 @@
   background-color: white;
 }
 
-.mbutton {
+.mbutton-desc {
   width: 100%;
   height: 50px;
   background-color: #ffc062;
   border-radius: 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
-.mbutton::after {
+.mbutton-desc::after {
   border: none;
+}
+
+.mbutton-desc-text {
+  color: white;
 }
